# cyber-agent-cli

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/cyber_agent/: __init__.py  capability_registry.py  config.py  execution_control.py  local_config.py  openai_compat.py  session_store.py
src/cyber_agent/agent/: approval.py  core.py  mode.py  runner.py
src/cyber_agent/cli/: app.py  branding.py  doctor.py  feishu_long_connection.py  interactive.py  prompting.py  render.py  theme.py  tui.py  webhook.py
src/cyber_agent/tools/: __init__.py  filesystem.py  metadata.py  patching.py  search.py  security.py  system.py
src/cyber_agent_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_000_bootstrap.py  test_agent_mode.py  test_agent_runner.py  test_agent_tool_call.py  test_authorized_mode_tools.py  test_capability_registry.py  test_cli_chat_e2e.py  test_cli_commands.py  test_cli_interactive.py  test_config.py  test_feishu_long_connection.py  test_openai_compat.py  test_search_tool.py  test_session_store.py  test_webhook_gateway.py
