[project]
name = "cyber-agent-cli"
version = "0.1.0"
description = "一个基于LangChain的网络安全智能体CLI工具"
requires-python = ">=3.11"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-openai",
    "typer>=0.16.0",
    "click>=8.2.1",
    "textual>=0.52.0",
    "prompt_toolkit>=3.0.48",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.1",
    "playwright>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    # 根据你的网络安全工具需求添加更多依赖
]

[project.scripts]
cyber-agent = "cyber_agent.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
